frontend/tests/cases/negative/simple/comments.gr
{- First line comment needs to be here -}

bad : Int
bad = "Hi"

{- Break -}

ok : Int
ok = 1