frontend/tests/cases/negative/simple/comments.gr.output
Type checking failed: 
Type error: frontend/tests/cases/negative/comments.gr:4:7:
Expected `Int` but got `String`